# python-project-83

./: .env  .gitignore  Makefile  Procfile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: lind_and_test
page_analyzer/: __init__.py  app.py  parser.py  repository.py  url_validator.py
page_analyzer/templates/: index.html  layout.html  url_detail.html  urls.html
