[project]
name = "page_analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "Flask",
    "python-dotenv",
    "gunicorn",
    "psycopg2-binary",
    "validators",
    "requests",
    "beautifulsoup4"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "ruff",
    "pytest"
]

[tool.setuptools]
package-dir = { "hexlet-code" = "page_analyzer" }